@@ -1,6 +1,9 @@
 /* $Id$ */
 
 2005-10-30: bird
+    - kBuild/env.sh:
+        o amd64.
+        o kDepCCxx -> kDepPre. Ash.
     - kBuild/bin/amd64.linux/kDepPre, src/kDepPre/kDepPre.c:
         o Fix case option - need it on unix for cl.exe with wine.
 
